--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>show</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <h1>showing <%= campground.title %>
     </h1>
     <h2>showing <%= campground.location %>
     </h2>
+    <img src="<%=campground.image%>" alt="">
+    <p>
+        <%=campground.description%>
+    </p>
     <p><a href="/campgrounds/<%= campground._id%>/edit">edit</a></p>
     <p>
     <form action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
@@ -22,6 +16,3 @@
     <footer>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
-</body>
-
-</html>
