--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -53,10 +53,13 @@
                 <div class="mb-3">
                     <% campground.images.forEach(function(img, i) { %>
                         <img src="<%=img.thumbnail %>" class="img-thumbnail" alt="">
-                        <div class="form-check-inline">
-                            <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="<%=img.filename%>"
+                                name="deleteImages[]" id="image-<%=i%>">
+                            <label class="form-check-label" for="image-<%=i%>">
+                                Delete
+                            </label>
                         </div>
-                        <label for="image-<%=i%>">Delete?</label>
                         <% })%>
                 </div>
                 <div class="mb-3">
