--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -36,6 +36,10 @@
                         Looks good!
                     </div>
                 </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Choose image(s)</label>
+                    <input class="form-control" type="file" name="image" id="image" multiple>
+                </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
@@ -43,15 +47,6 @@
                         required></textarea>
                     <div class="valid-feedback">
                         Looks good!
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <div class="form-file custom-file">
-                        <input type="file" class="form-file-input" id="image" name="image" multiple>
-                        <label class="form-file-label" for="image">
-                            <span class="form-file-text custom-file-label">Choose image(s)...</span>
-                            <span class="form-file-button">Browse</span>
-                        </label>
                     </div>
                 </div>
                 <div class="mb-3">
