--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -37,8 +37,8 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Choose image(s)</label>
-                    <input class="form-control" type="file" name="image" id="image" multiple>
+                    <label for="image" class="form-label">Choose image(s)</label>
+                    <input class="form-control" type="file" name="image" id="image" for="image" multiple>
                 </div>
 
                 <div class="mb-3">
