--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <%if(campground.images.length) {%>
-                        <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                        <img class="img-fluid rounded float-start" alt="" src="<%=campground.images[0].url%>">
                         <% }else {%>
                             <img class="img-fluid" alt=""
                                 src="https://res.cloudinary.com/dzkroqk4h/image/upload/v1624455585/YelpCamp/fz4u1iktjndqpuausa1c.jpg">
