--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -27,7 +27,8 @@
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
                             aria-describedby="price-label" name="campground[price]" value="<%=campground.price %>"
-                            required>\<div class="valid-feedback">
+                            required>
+                        <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
@@ -64,6 +65,5 @@
                     <button class="btn btn-info">Update Campground</button>
                 </div>
             </form>
-            <a href="/campgrounds/<%= campground._id%>">Back To Campground</a>
         </div>
     </div>
