--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,7 +9,7 @@
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
                         <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-                            <img src="<%=img.url%>" class="d-block w-100" alt="...">
+                            <img src="<%=img.cardImage%>" class="d-block w-100" alt="...">
                         </div>
                         <% }) %>
                 </div>
@@ -27,7 +27,7 @@
                     <% } %>
             </div>
 
-            <div class="card mb-3">
+            <div class="card mb-2">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title%>
